--- a/src/main/resources/templates/thymeleaf/notice.html
+++ b/src/main/resources/templates/thymeleaf/notice.html
@@ -27,12 +27,70 @@
 
 <style>
 
+.site-navbar{
+	position: relative;
+	width: 1900px;
+	height: 150px;
+}
+.col-lg-12{
+	width : 1900px;
+	height : 800px;
+}
+.pagination{
+	
+	position:relative;
+	display :flex;
+	flex-direction : column;
+}
+.custom-pagination{
+	position:relative;
+	display :flex;
+	flex-direction : row;
+	justify-content: center;
+	margin-top : 40px;
+	
+}
 
 </style>
 
 <body>
   <!-- Main Navigation ========================================================================================== -->
-  <jsp:include page="/WEB-INF/view/include/header.jsp"/>
+  
+<header class="site-navbar py-4" role="banner">
+
+	<div class="container">
+		<div class="d-flex align-items-center">
+			<div class="site-logo">
+				<a href="index"> <img src="images/logo.png" alt="Logo">
+				</a>
+			</div>
+			<div class="ml-auto">
+				<nav class="site-navigation position-relative text-right"
+					role="navigation">
+					<ul
+						class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
+						<li><a href="/" class="nav-link">Home</a></li>
+						<li><a href="matches" class="nav-link">Matches</a></li>
+						<li><a href="players" class="nav-link">Players</a></li>
+						<li><a href="xMain" class="nav-link">MainPage</a></li>
+						<li class="dropdown"><a href="#" class="dropdown-toggle "
+							data-toggle="dropdown">게시판<b class="caret"></b></a>
+							<ul class="dropdown-menu">
+								<li><a href="/notice" class="drop">공지사항</a></li>
+								<li><a href="/board" class="drop">자유게시판</a></li>
+							</ul></li>
+						<li><a href="/login" class="nav-link">Login</a></li>
+					</ul>
+				</nav>
+
+				<a href="#"
+					class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-black float-right text-white"><span
+					class="icon-menu h3 text-white"></span></a>
+			</div>
+		</div>
+	</div>
+
+</header>
 
   <!-- Container ======================================================================================= -->
   <div class="container">
@@ -79,7 +137,7 @@
                 				 <td th:text="${memberStat.count}">1</td>
                 				 <td th:text="${member.id}">tester</td>
                 				 <td th:text="${member.password}">tester</td>
-                				 <td><a th:href="@{/members/{memberId}(memberId=${member.id})}">[[${member.name}]]</a></td>
+                				 <td><a th:href="@{/{memberId}(memberId=${member.id})}">[[${member.name}]]</a></td>
                 				 <td th:text="${member.age}">10</td>
                 				 <td th:text="${#temporals.format(member.regdate, 'yyyy-MM-dd HH:mm:ss')}">2022-10-10</td>
               					 </tr>
@@ -104,17 +162,93 @@
                       
                       
                       <li th:if="${hasNext}"><a th:href="@{/notice(page=${requestPage}, search=${param.search})}" th:text="'>>'">다음페이지</a></li>
+                  </div>
+                  </div>
+                  </div>
+                  
                     </ul>
                   
-				 </div>
-				 </div>
-				 </div>
+				</div>
+	     	</div>
+	  </div>
+   </div>
+        
+    <!-- Footer ========================================================================================== -->
+    <footer class="footer-section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-3">
+                        <div class="widget mb-3">
+                            <h3>News</h3>
+                            <ul class="list-unstyled links">
+                                <li><a href="#">All</a></li>
+                                <li><a href="#">Club News</a></li>
+                                <li><a href="#">Media Center</a></li>
+                                <li><a href="#">Video</a></li>
+                                <li><a href="#">RSS</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="widget mb-3">
+                            <h3>Tickets</h3>
+                            <ul class="list-unstyled links">
+                                <li><a href="#">Online Ticket</a></li>
+                                <li><a href="#">Payment and Prices</a></li>
+                                <li><a href="#">Contact &amp; Booking</a></li>
+                                <li><a href="#">Tickets</a></li>
+                                <li><a href="#">Coupon</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="widget mb-3">
+                            <h3>Matches</h3>
+                            <ul class="list-unstyled links">
+                                <li><a href="#">Standings</a></li>
+                                <li><a href="#">World Cup</a></li>
+                                <li><a href="#">La Lega</a></li>
+                                <li><a href="#">Hyper Cup</a></li>
+                                <li><a href="#">World League</a></li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-3">
+                        <div class="widget mb-3">
+                            <h3>Social</h3>
+                            <ul class="list-unstyled links">
+                                <li><a href="#">Twitter</a></li>
+                                <li><a href="#">Facebook</a></li>
+                                <li><a href="#">Instagram</a></li>
+                                <li><a href="#">Youtube</a></li>
+                            </ul>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="row text-center">
+                    <div class="col-md-12">
+                        <div class=" pt-5">
+                            <p>
+                                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                                Copyright &copy;
+                                <script>
+                                    document.write(new Date().getFullYear());
+                                </script> All rights reserved | This template is made with <i class="icon-heart"
+                                    aria-hidden="true"></i> by <a href="https://colorlib.com"
+                                    target="_blank">Colorlib</a>
+                                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                            </p>
+                        </div>
+                    </div>
+
                 </div>
             </div>
-        </div>
-    <!-- Footer ========================================================================================== -->
-    <jsp:include page="/WEB-INF/view/include/footer.jsp" />
-  </div>
+	</footer>
+
+  
 
 	<script src="js/jquery-3.3.1.min.js"></script>
 	<script src="js/jquery-migrate-3.0.1.min.js"></script>
