--- a/src/main/resources/templates/thymeleaf/realNotice.html
+++ b/src/main/resources/templates/thymeleaf/realNotice.html
@@ -34,7 +34,7 @@
 }
 .col-lg-12{
 	width : 1900px;
-	height : 800px;
+	height : 1000px;
 }
 .pagination{
 	
@@ -49,6 +49,14 @@
 	justify-content: center;
 	margin-top : 40px;
 	
+}
+
+.txt_line {
+	height:67px;
+  	display: -webkit-box;
+  	-webkit-line-clamp: 1;
+  	-webkit-box-orient: vertical;
+  	overflow: hidden;
 }
 
 </style>
@@ -73,12 +81,7 @@
 						<li><a href="matches" class="nav-link">Matches</a></li>
 						<li><a href="players" class="nav-link">Players</a></li>
 						<li><a href="xMain" class="nav-link">MainPage</a></li>
-						<li class="dropdown"><a href="#" class="dropdown-toggle "
-							data-toggle="dropdown">게시판<b class="caret"></b></a>
-							<ul class="dropdown-menu">
-								<li><a href="/notice" class="drop">공지사항</a></li>
-								<li><a href="/board" class="drop">자유게시판</a></li>
-							</ul></li>
+						<li><a href="/realNotice" class="nav-link">Notice</a></li>
 						<li><a href="/login" class="nav-link">Login</a></li>
 					</ul>
 				</nav>
@@ -107,9 +110,9 @@
                         <div class="panel-body">
                         
                             
-                            <form th:action="@{/notice}" method="get">
+                            <form th:action="@{/realNotice}" method="get">
         					  <div>
-            					  <input type="text" name="id" class="form-control" placeholder="아이디를 입력하세요" >
+            					  <input type="text" name="id" class="form-control" placeholder="아이디 또는 제목을 입력하세요" >
         					  </div>
 
         					  <button class="btn-primary" type="submit">전송</button>
@@ -125,11 +128,10 @@
                         <table class="table table-striped table-bordered table-hover">
                             <thead>
                                 <tr>
-                                    <th class="text-center">번호</th>
+                                    <th class="text-center"></th>
                                     <th class="text-center">아이디</th>
-                                    <th class="text-center">비밀번호</th>
-                                    <th class="text-center">이름</th>
-                                    <th class="text-center">이메일</th>
+                                    <th class="text-center">제목</th>
+                                    <th class="text-center">내용</th>
                                     <th class="text-center">등록일자</th>
                                 </tr>
                             </thead>
@@ -137,13 +139,12 @@
                                 <!--<tr><td colspan="5" class="text-center">가입한 회원이 없습니다.</td></tr>-->
                                  <tbody>
               					 <tr th:if="${totalElements == 0}"><td colspan="5" class="text-center">검색된 회원이 없습니다.</td></tr>
-              					 <tr class="text-center" th:each="member, memberStat : ${list}">
-                				 <td th:text="${memberStat.count}">1</td>
-                				 <td th:text="${member.id}">tester</td>
-                				 <td th:text="${member.password}">tester</td>
-                				 <td><a th:href="@{/{memberId}(memberId=${member.id})}">[[${member.name}]]</a></td>
-                				 <td th:text="${member.age}">10</td>
-                				 <td th:text="${#temporals.format(member.regdate, 'yyyy-MM-dd HH:mm:ss')}">2022-10-10</td>
+              					 <tr class="text-center" th:each="notice, noticeStat : ${list}">
+                				 <td th:text="${noticeStat.count}">1</td>
+                				 <td th:text="${notice.id}">tester</td>
+                				 <td><a th:href="@{/{noticeId}(noticeId=${notice.id})}">[[${notice.title}]]</a></td>
+                				 <td class="txt_line" th:text="${notice.content}">tester</td>
+                				 <td th:text="${#temporals.format(notice.notice_date, 'yyyy-MM-dd HH:mm:ss')}">2022-10-10</td>
               					 </tr>
                             </tbody>
                         </table>
@@ -157,15 +158,15 @@
         		  <div class="col-lg-7 text-center">
           		  <div class="custom-pagination">
                       
-                      <li th:if="${hasPrevious}"><a th:href="@{/notice(page=${requestPage-2}, search=${param.search})}" th:text="'<<'">이전페이지</a></li>
+                      <li th:if="${hasPrevious}"><a th:href="@{/realNotice(page=${requestPage-2}, search=${param.search})}" th:text="'<<'">이전페이지</a></li>
                       
                       <th:block th:if="${totalElements != 0}" th:each="page : ${#numbers.sequence(startPage, endPage)}">
                         <li class="active" th:if="${page == requestPage}"><a th:text="${page}">1</a></li>
-                        <li th:if="${page != requestPage}"><a th:href="@{/notice(page=${page-1}, search=${param.search})}" th:text="${page}">1</a></li>
+                        <li th:if="${page != requestPage}"><a th:href="@{/realNotice(page=${page-1}, search=${param.search})}" th:text="${page}">1</a></li>
                       </th:block>
                       
                       
-                      <li th:if="${hasNext}"><a th:href="@{/notice(page=${requestPage}, search=${param.search})}" th:text="'>>'">다음페이지</a></li>
+                      <li th:if="${hasNext}"><a th:href="@{/realNotice(page=${requestPage}, search=${param.search})}" th:text="'>>'">다음페이지</a></li>
                   </div>
                   </div>
                   </div>
